# spice-gtk

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
build-aux/: meson-dist
build-aux/meson/: check-spice-common
data/: Makefile.am  meson.build
doc/: Makefile.am
doc/reference/: Makefile.am  meson.build  spice-gtk-docs.xml  spice-gtk-sections.txt
m4/: manywarnings.m4  spice-compile-warnings.m4
man/: Makefile.am  meson.build
po/: LINGUAS  cs.po  de.po  fr.po  it.po  meson.build
src/: Makefile.am  bio-gio.h  cd-device-linux.c  cd-device-win.c  cd-device.h  cd-scsi-dev-params.h  cd-scsi.c  cd-scsi.h  cd-usb-bulk-msd.c  cd-usb-bulk-msd.h  channel-base.c  channel-cursor.c  channel-display-gst.c  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-display.h  channel-inputs.c  channel-main.c  channel-playback-priv.h  channel-playback.c  channel-port.c  channel-record.c  channel-smartcard.c  channel-usbredir-priv.h  channel-usbredir.c  channel-webdav.c  client_sw_canvas.h  continuation.c  continuation.h  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  decode-glz.c  decode.h  desktop-integration.c  desktop-integration.h  gio-coroutine.h  giopipe.c  giopipe.h  (+51 more)
tests/: Makefile.am  cd-emu.c  meson.build  usb-acl-helper.c
tools/: Makefile.am  meson.build  spicy-screenshot.c  spicy.c
vapi/: Makefile.am  meson.build
